@@ -1,7 +1,7 @@
-@comment $NetBSD: PLIST,v 1.2 2003/01/23 22:47:44 jmmv Exp $
+@comment $NetBSD: PLIST,v 1.3 2003/03/11 01:48:57 hubertf Exp $
 bin/kermit
 share/doc/kermit/ckaaaa.txt
-share/doc/kermit/ckc206.txt
+share/doc/kermit/ckc208.txt
 share/doc/kermit/ckcbwr.txt
 share/doc/kermit/ckccfg.txt
 share/doc/kermit/ckcplm.txt
