@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.6 2003/01/09 18:41:03 mycroft Exp $
+$NetBSD: distinfo,v 1.7 2003/03/11 01:48:57 hubertf Exp $
 
-SHA1 (cku206.tar.gz) = 42a4a2e00e71d76f51987b9efe2b1b52e7ceb25d
-Size (cku206.tar.gz) = 2858567 bytes
+SHA1 (cku208.tar.gz) = 574dfd918abd9fce71639b964e84e7788b689343
+Size (cku208.tar.gz) = 2871515 bytes
