@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.1614 2003/03/11 00:13:41 salo Exp $
+$NetBSD: CHANGES,v 1.1615 2003/03/11 01:48:56 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -1024,3 +1024,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated pkgdepgraph to 2.1 [atatat 2003-03-10]
 	Updated gdb to 5.3 [seb 2003-03-11]
 	Updated gpgme to 0.3.15 [salo 2003-03-11]
+	Updated kermit to 8.0.208 [hubertf 2003-03-11]
